# HashMasm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
articles/: DedTaskEn.pages
examples/: LFTests.cpp  comparison.cpp  dict.cpp  leo.cpp  leoTests.cpp  main.cpp
src/: CRC.h  CRCLookup.h  FastList.h  HashMasm.cpp  HashMasm.h  HashMasmFixed.cpp  HashMasmFixed.h  hashes.h  hashesLookup.h  optimizations.asm  timingTools.h
src/hash/: hashes.h
src/helpers/: leoTestsHelpers.cpp  leoTestsHelpers.h  timingTools.h
tests/: basicTests.cpp  testTools.h
